--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: DataMonster
 description: A virtual proof that I'm awesome
 
 # Your name to show in the footer
-author: Some Person
+author: Elif Ayar
 
 # --- List of links in the navigation bar --- #
 
