--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ author: Elif Ayar
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+#  Resources:
+#   - Beautiful Jekyll: "https://beautifuljekyll.com"
+#   - Learn markdown: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
 
 # --- Logo --- #
@@ -38,13 +38,13 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "ayar@wisc.edu"
+#  facebook: deanattali
+  github: ayarelif
+#  twitter: daattali
   rss: true
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: "www.linkedin.com/in/elif-ayar"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
