--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ excerpt_length: 50
 navbar-col: "#65A720"
 navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
-page-col: "#FFFFFF"
+page-col: "#F2F5CE "
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
