edit resources part

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,10 @@ author: Elif Ayar
 
 navbar-links:
   About Me: "aboutme"
-#  Resources:
+  Resources:
+    -Mathematic:
+    -Data Science:
+    -Actuary:
 #   - Beautiful Jekyll: "https://beautifuljekyll.com"
 #   - Learn markdown: "https://www.markdowntutorial.com/"
 #  Author's home: "https://deanattali.com"
