--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ footer-link-col: "#404040"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-171667957-1"
 
 # Google Tag Manager ID
 #gtm: ""
